--- a/.htaccess
+++ b/.htaccess
@@ -77,25 +77,25 @@
 ## enable apache served files compression
 ## http://developer.yahoo.com/performance/rules.html#gzip
 
-    # Insert filter on all content
-    ###SetOutputFilter DEFLATE
-    # Insert filter on selected content types only
-    #AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript
+# Insert filter
+SetOutputFilter DEFLATE
 
-    # Netscape 4.x has some problems...
-    #BrowserMatch ^Mozilla/4 gzip-only-text/html
+# Netscape 4.x has some problems…
+BrowserMatch ^Mozilla/4 gzip-only-text/html
 
-    # Netscape 4.06-4.08 have some more problems
-    #BrowserMatch ^Mozilla/4\.0[678] no-gzip
+# Netscape 4.06-4.08 have some more problems
+BrowserMatch ^Mozilla/4\.0[678] no-gzip
 
-    # MSIE masquerades as Netscape, but it is fine
-    #BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
+# MSIE masquerades as Netscape, but it is fine
+BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
+# Don’t compress images
+SetEnvIfNoCase Request_URI \.(?:gif|jpe?g|png)$ no-gzip dont-vary
 
-    # Don't compress images
-    #SetEnvIfNoCase Request_URI \.(?:gif|jpe?g|png)$ no-gzip dont-vary
+# Make sure proxies don’t deliver the wrong content
+Header append Vary User-Agent env=!dont-vary
 
-    # Make sure proxies don't deliver the wrong content
-    #Header append Vary User-Agent env=!dont-vary
+# enable resulting html compression
+php_flag zlib.output_compression on
 
 </IfModule>
 
