minor htaccess tweaks

--- a/.htaccess
+++ b/.htaccess
@@ -161,6 +161,7 @@
 ## Add default Expires header
 ## http://developer.yahoo.com/performance/rules.html#expires
 
+    ExpiresActive On
     ExpiresDefault "access plus 1 year"
 
 </IfModule>
@@ -175,5 +176,5 @@
 ## If running in cluster environment, uncomment this
 ## http://developer.yahoo.com/performance/rules.html#etags
 
-    #FileETag none
+    FileETag none
 
